--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,9 +1,14 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-  }
-  
-  .username {
-    font-weight: 700;
-  }
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.username {
+  font-weight: 700;
+}
+
+.avatar {
+  margin-right: 4px;
+  width: 50px;
+}
