add styles and bg

--- a/src/components/PasswordList/PasswordList.module.css
+++ b/src/components/PasswordList/PasswordList.module.css
@@ -1,11 +1,27 @@
+.container,
 .form {
-    width: 320px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .label {
     display: flex;
     flex-direction: column;
-    margin-bottom: 16px;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+
+.input {
+    display: flex;
+    width: 300px;
+    font-size: 13px;
+    border: 3px solid #cadfcf;
+    padding: 0.6em;
+    border-radius: 4px;
+    background: #fefefe;
+    color: #231f20;
 }
 
 .list {
@@ -13,42 +29,6 @@
     list-style: none;
     counter-reset: li;
     padding: 0;
-}
-
-.item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin-bottom: 1.5em;
-    border: 3px solid #cadfcf;
-    padding: 0.6em;
-    border-radius: 4px;
-    background: #fefefea4;
-    color: #231f20;
-}
-
-.item:before {
-    position: absolute;
-    top: -0.7em;
-    padding-left: 0.4em;
-    padding-right: 0.4em;
-    font-size: 16px;
-    font-weight: bold;
-    color: #728d78;
-    background: #fefefe;
-    border-radius: 50%;
-    counter-increment: li;
-    content: counter(li);
-}
-
-.name {
-    font-weight: 500;
-    padding-right: 15px;
-}
-
-.number {
-    padding-right: 15px;
 }
 
 .button {
@@ -63,9 +43,7 @@
     padding: 0.6em;
     border-radius: 4px;
     margin: 10px 20px;
-    /* text-transform: uppercase; */
     text-align: center;
-    letter-spacing: 3px;
     font-weight: 600;
     color: #524f4e;
     background: white;
