--- a/src/components/PasswordItem/PasswordItem.module.css
+++ b/src/components/PasswordItem/PasswordItem.module.css
@@ -1,20 +1,3 @@
-.form {
-    width: 320px;
-}
-
-.label {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 16px;
-}
-
-.list {
-    margin-left: 0;
-    list-style: none;
-    counter-reset: li;
-    padding: 0;
-}
-
 .item {
     display: flex;
     justify-content: center;
@@ -47,8 +30,15 @@
     padding-right: 15px;
 }
 
-.number {
-    padding-right: 15px;
+.input {
+    display: flex;
+    width: 150px;
+    font-size: 13px;
+    border: 3px solid #cadfcf;
+    padding: 0.6em;
+    border-radius: 4px;
+    background: #fefefe;
+    color: #231f20;
 }
 
 .button {
@@ -63,9 +53,7 @@
     padding: 0.6em;
     border-radius: 4px;
     margin: 10px 20px;
-    /* text-transform: uppercase; */
     text-align: center;
-    letter-spacing: 3px;
     font-weight: 600;
     color: #524f4e;
     background: white;
