--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -6,9 +6,39 @@
 
 .username {
   font-weight: 700;
+  margin-right: 12px;
+  font-size: 18px;
 }
 
 .avatar {
   margin-right: 4px;
   width: 50px;
+}
+
+.button {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 140px;
+  height: 45px;
+  line-height: 45px;
+  border: 3px solid #cadfcf;
+  padding: 0.6em;
+  border-radius: 4px;
+  margin: 20px;
+  text-align: center;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+  transition: 0.3s;
+}
+
+.button:hover {
+  background: #728d78;
+  box-shadow: 0 15px 20px #728d78;
+  color: white;
+  transform: translateY(-7px);
+  border: none;
 }
